# dual_ur

./: .gitignore  .gitmodules  README.md
dual_ur_robotiq_rs_motion_test/: package.xml  setup.cfg  setup.py
dual_ur_robotiq_rs_motion_test/dual_ur_robotiq_rs_motion_test/: motion_test_arm.py  motion_test_dual_ur.py  motion_test_gripper.py
dual_ur_robotiq_rs_motion_test/launch/: motion_test.launch.py
dual_ur_robotiq_rs_moveit_config/: CMakeLists.txt  package.xml
dual_ur_robotiq_rs_moveit_config/config/: base_frame.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  right_initial_positions.yaml
dual_ur_robotiq_rs_moveit_config/gazebo/: workstation.sdf
dual_ur_robotiq_rs_moveit_config/include/dual_ur_robotiq_rs_moveit_config/: dual_ur_robotiq_rs_node.h
dual_ur_robotiq_rs_moveit_config/launch/: dual_ur_robotiq_rs.launch.py  dual_ur_robotiq_rs_control.launch.py  dual_ur_robotiq_rs_moveit.launch.py  motion_test.launch.py  view_dual_ur_robotiq_rs.launch.py
dual_ur_robotiq_rs_moveit_config/src/: dual_ur_robotiq_rs_node.cpp
dual_ur_robotiq_rs_moveit_config/srdf/: dual_ur_robotiq_rs.srdf.xacro
dual_ur_robotiq_rs_moveit_config/urdf/: dual_ur_robotiq_rs.urdf.xacro  test.urdf
ur_robotiq_rs_moveit_config/: CMakeLists.txt  package.xml
ur_robotiq_rs_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
ur_robotiq_rs_moveit_config/launch/: ur_robotiq_rs.launch.py  ur_robotiq_rs_planning.launch.py  view_ur_robotiq_rs.launch.py
ur_robotiq_rs_moveit_config/moveit2/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines_config.yaml
ur_robotiq_rs_moveit_config/src/: ur_robotiq_rs_node.cpp
ur_robotiq_rs_moveit_config/srdf/: ur_robotiq_rs.srdf.xacro  ur_robotiq_rs_macro.srdf.xacro
(+61 files in other folders)
