<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_ur_robotiq_rs_moveit_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zitongbai@outlook.com">xiaobaige</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_common</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf2</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>control_msgs</depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
